# shopay

./: .gitignore  README.md
android/: android.sln
android/android/android/: App.xaml  App.xaml.cs  android.csproj
android/android/android.Android/: MainActivity.cs  android.Android.csproj
android/android/android.Android/Properties/: AndroidManifest.xml  AssemblyInfo.cs
android/android/android/Models/: Item.cs  ItemStore.cs  Product.cs
android/android/android/Services/: Fetcher.cs  IDataStore.cs  ItemDictionary.cs  MockDataStore.cs  ServerCommunicator.cs  ServerStore.cs
android/android/android/ViewModels/: AboutViewModel.cs  BaseViewModel.cs  ItemDetailViewModel.cs  ItemsViewModel.cs
android/android/android/Views/: AboutPage.xaml  AboutPage.xaml.cs  EditPage.xaml  EditPage.xaml.cs  ItemDetailPage.xaml  ItemDetailPage.xaml.cs  ItemsPage.xaml  ItemsPage.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MapPage.xaml  MapPage.xaml.cs  NewItemPage.xaml  NewItemPage.xaml.cs
backend/: Cargo.toml
backend/src/: avocado_bk.rs  main.rs
design/: todo.txt
